--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <div class="navbar">
-    <h1 class="title">POKEMON</h1>
+    <a routerLink="/"> 
+        <h1 class="title">POKEMON</h1>
+    </a>
 </div>
 <router-outlet></router-outlet>
