--- a/src/app/pokemon-details/pokemon-details.component.css
+++ b/src/app/pokemon-details/pokemon-details.component.css
@@ -40,6 +40,16 @@
     width: 60%;
 }
 
+.types {
+  display: flex;
+  flex-direction: row;
+}
+
+.types img {
+  width: 4rem;
+
+}
+
 @media only screen and (min-width: 768px) {
     .title {
         font-size: 2rem;
