--- a/src/app/pokemon-details/pokemon-details.component.html
+++ b/src/app/pokemon-details/pokemon-details.component.html
@@ -5,6 +5,10 @@
     <p class="PV">Attack {{ pokemon.stats.attack }}</p>
     <p class="PV">Defense {{ pokemon.stats.defense }}</p>
     <p class="PV">Speed {{ pokemon.stats.speed }}</p>
+    <div class="types">
+      <p class="PV">Types : {{ pokemon.apiTypes[0].name }}</p>
+      <img src="{{ pokemon.apiTypes[0].image }}" alt="{{ pokemon.name }} image" />
+    </div>
   </div>
   <div class="image">
     <img src="{{ pokemon.image }}" alt="{{ pokemon.name }} image" />
